# zero

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt  main.c  main.cpp
common/: CMakeLists.txt
common/include/common/: logger.h  types.h  version.h
common/include/common/command/: command.h  command_handler.h  command_help.h  command_template.h
common/include/common/console/: console.h
common/include/common/control/: control.h  control_template.h
common/include/common/draw/: bmpspritesheet.h  canvas.h
common/include/common/drivers/: epaper.h  ssd1306.h  ws2812.h
common/src/: logger.cpp  types.cpp
common/src/command/: command.cpp  command_handler.cpp  command_help.cpp
common/src/console/: console.cpp
common/src/control/: control.cpp
common/src/draw/: bmpspritesheet.cpp  canvas.cpp
common/src/drivers/: epaper.cpp  ssd1306.cpp  ws2812.cpp
common/src/json/: cjson.cpp
core/: CMakeLists.txt
core/include/core/: logger.h  version.h
core/include/core/command/: command.h
core/include/core/console/: console.h
core/include/core/draw/: bmpspritesheet.h  canvas.h
core/include/core/drivers/: adxl345.h  at24c.h  enc28j60.h  sht3xdis.h  ssd1306.h  ssd1351.h  ws2812.h
core/include/core/tools/: i2c.h  weather.h
core/include/core/types/: hash_table.h
core/src/: logger.c
core/src/command/: command.c
core/src/console/: console.c
core/src/draw/: bmpspritesheet.c  canvas.c
core/src/drivers/: adxl345.c  at24c.c  enc28j60.c  sht3xdis.c  ssd1306.c  ssd1351.c  ws2812.c
core/src/json/: cjson.c
core/src/tools/: i2c.c  weather.c
core/src/types/: hash_table.c
project/conways/: CMakeLists.txt  settings.sh
project/conways/include/project/: application.h  game.h
project/conways/src/: application.c  application.cpp  game.c  game.cpp
project/devices/: CMakeLists.txt  settings.sh
project/devices/include/project/: application.h  resources.h
project/devices/src/: application.c  resources.c
project/devices/src/resources/: sarah.bmp.s
project/dewpoint/: CMakeLists.txt  settings.sh
project/dewpoint/include/project/: application.h  resources.h
project/dewpoint/resources/: font.txt
project/dewpoint/src/: application.c  application.cpp  resources.cpp
project/dewpoint/src/resources/: font.txt.s
project/enc28j60/: CMakeLists.txt  settings.sh
project/enc28j60/include/project/: application.h
project/enc28j60/lwip/: lwipopts.h
project/enc28j60/src/: application.c
project/epaper/: CMakeLists.txt  settings.sh
project/epaper/include/project/: application.h  facts.h
project/epaper/include/project/command/: command_facts.h
project/epaper/include/project/draw/: draw.h
project/epaper/src/: application.cpp  facts.cpp
project/epaper/src/draw/: draw.cpp
project/example/: CMakeLists.txt  settings.sh
project/example/include/project/: application.h
project/example/src/: application.c
project/oled/: CMakeLists.txt  settings.sh
project/oled/include/project/: application.h  resources.h
project/oled/src/: application.cpp  resources.cpp
project/oled/src/resources/: red_blue_font.bmp.s  red_blue_grayscale.bmp.s
project/pokedex/: CMakeLists.txt  settings.sh
project/pokedex/include/project/: application.h  bmpspritesheet.h  pokedex.h  resources.h
project/pokedex/include/project/draw/: canvas.h  draw.h  font.h
project/pokedex/src/: application.cpp  bmpspritesheet.cpp  pokedex.cpp
project/pokedex/src/draw/: canvas.cpp  draw.cpp  font.cpp
project/pokedex/src/resources/: red_blue.bmp.s
project/rgboled/: CMakeLists.txt  settings.sh
project/rgboled/include/project/: application.h
project/rgboled/src/: application.c
tools/bitmapreader/: .bmpspritesheet.c.swp  CMakeCache.txt  CMakeLists.txt  Makefile  bitmapreader  bmp.c  bmp.h  bmpspritesheet.c  bmpspritesheet.h  cmake_install.cmake  main.c
